# py-private

./: .gitignore  .gpgrc  CLAUDE.md  FileZilla.xml.gpg  all-projects.csv.gpg  list.csv  list.csv.gpg  main.py  pyproject.toml  requirements.txt  servers.csv  servers.csv.gpg  todo.md
classes/: FilesHandle.py
libs/: buffer.py
modules/: Projects.py  allProjectsToFile.py  backups.py  connectToProject.py  copyServerDataToClipboard.py  downloadFiles.py  findAllProject.py  findProject.py  getHostByProjectName.py  getServerByHost.py  notifySend.py  pullFiles.py  pushFiles.py  recentFiles.py  server.py  uploadFiles.py  viewProjects.py
utils/: checkCsvFiles.py  getProjects.py  getProjectsFromCsv.py  getVps.py  selectWpressFile.py
